# aoc

./: .gitignore  extract-bigboy.sh  go.mod  utils.go
2019/: .gitignore  README.md  build.gradle  quickstart.xml  settings.gradle
2019/gradle/wrapper/: gradle-wrapper.properties
2019/misc/one/: one.c
2020/: README.md
2020/cpp/: .gitignore  CMakeLists.txt  cenas.cpp  cenas.h  main.cpp  make
2020/go/: go.mod  make  utils.go
2020/go/aoc2020_one/: benchmark.sh  one.go  one_test.go
2020/java/: .gitignore  build.gradle  settings.gradle
2022/: .gitignore  README.md  go.mod
2022/day1/: one.go
2022/day1/heap/: benchmark.sh  (+1 more)
2022/day3/: three_test.go
2022/day6/: six.go
2022/day7/: seven.go
2022/day8/: eight.go  eight_test.go
2023/: README.md
2023/lib/: aoc.ex  four.ex  one.ex  three.ex  two.ex
2023/test/: four_test.exs  one_test.exs  three_test.exs  two_test.exs
2024/: .gitignore  .tool-versions  d01.rb  d02.rb  d03.rb  d04.rb  d05.rb  d06.rb  d07.rb  d08.rb  d09.rb  d10.rb  d11.rb  d12.rb  d12_andre.rb  d13.rb  d14.rb  d15.rb  d16.rb  d17.rb  d18.rb  d19.rb  d20.rb  d21.rb  d22.rb  d23.rb  d24.rb  d25.rb
2025/: d01.rb
day1/: one_test.go
day1/heap/: one_heap.go  one_test.go
day1/python/: one.py  one_oneliner.py
day2/: two.go  two_test.go
day3/: three.go  three_test.go
day4/: four.go  four_test.go
day5/: five.go  five_test.go
day6/: six.go  six_test.go
day7/: seven_test.go
input/3/: bigboy.7z  bigboy.zst
one/: one.go  one.py  one_oneliner.py  one_test.go  perf.sh
three/: three_test.go
two/: two.go  two_test.go
(+11 files in other folders)
